# SFLM_bootcamp

./: CMakeLists.txt
app/: main.cpp
app/entity/include/: animation.hpp  entity.hpp  graphic_component.hpp  input_component.hpp  physics_component.hpp  player_graphic_component.hpp  player_input_component.hpp  player_physics_components.hpp
app/entity/src/: animation.cpp  entity.cpp  player_graphics_component.cpp  player_input_component.cpp  player_physics_component.cpp
app/state/include/: game.hpp  game_state.hpp  state.hpp
app/state/src/: game.cpp  game_state.cpp
include/: circle.hpp  entity.hpp  game.hpp  game_state.hpp  graphic_component.hpp  input_component.hpp  player.hpp  player_input_component.hpp  state.hpp
src/: circle.cpp  game.cpp  game_state.cpp  main.cpp  player.cpp
